Tune batch sizes, add support for skipping indexing