@@ -1,42 +1,29 @@
 package com.taxidata.service;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import co.elastic.clients.elasticsearch._types.query_dsl.MatchQuery;
+import co.elastic.clients.elasticsearch.ElasticsearchClient;
+import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
+import com.taxidata.domain.document.TripDocument;
+import com.taxidata.graphql.type.*;
+import com.taxidata.repository.TripElasticsearchRepository;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregations;
-import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.stereotype.Service;
 
-import com.taxidata.domain.document.TripDocument;
-import com.taxidata.graphql.type.PaymentAnalytics;
-import com.taxidata.graphql.type.PaymentTypeCount;
-import com.taxidata.graphql.type.PaymentTypeFare;
-import com.taxidata.graphql.type.VendorMetric;
-import com.taxidata.graphql.type.VendorStats;
-import com.taxidata.repository.TripElasticsearchRepository;
-
-import co.elastic.clients.elasticsearch.ElasticsearchClient;
-import co.elastic.clients.elasticsearch._types.aggregations.AggregationBuilders;
-import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
-import co.elastic.clients.elasticsearch.core.SearchRequest;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class TripElasticsearchService {
     private final TripElasticsearchRepository searchRepository;
-    private final ElasticsearchClient elasticsearchClient;
 
     public long getDocumentCount() {
         return searchRepository.count();
@@ -45,7 +32,7 @@ public class TripElasticsearchService {
     public LocalDateTime getLastSyncedTime() {
         Page<TripDocument> lastDoc = searchRepository.findAll(
                 PageRequest.of(0, 1, Sort.by(Sort.Direction.DESC, "lastModifiedDate")));
-        return lastDoc.hasContent() ? lastDoc.getContent().get(0).getLastModifiedDate() : null;
+        return lastDoc.hasContent() ? lastDoc.getContent().getFirst().getLastModifiedDate() : null;
     }
 
     public Page<TripDocument> searchTrips(
@@ -75,7 +62,7 @@ public class TripElasticsearchService {
 
         List<StringTermsBucket> buckets = aggs.aggregationsAsMap().get("vendors").aggregation()
                 .getAggregate().sterms().buckets().array().stream()
-                .collect(Collectors.toList());
+                .toList();
 
         List<VendorMetric> metrics = buckets.stream()
                 .map(bucket -> new VendorMetric(
@@ -100,7 +87,7 @@ public class TripElasticsearchService {
 
         List<StringTermsBucket> buckets = aggs.aggregationsAsMap().get("payment_types").aggregation()
                 .getAggregate().sterms().buckets().array().stream()
-                .collect(Collectors.toList());
+                .toList();
 
         List<PaymentTypeCount> counts = buckets.stream()
                 .map(bucket -> new PaymentTypeCount(
